# markov_chain_notestock

./: .gitignore  Cargo.toml  LICENSE  wrangler.toml
lib/: Cargo.toml
lib/assets/: JEITA_Genpaku_ChaSen_IPAdic.model.license
lib/src/: lib.rs  markov.rs  notestock.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/public/: index.html
wasm/src/: lib.rs
