[workspace]
resolver = "3"
members = ["lib", "wasm"]

[workspace.package]
version = "0.1.0"
authors = ["SyoBoN"]
edition = "2024"
license = "BSD-3-Clause"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
