# SPDX-FileCopyrightText: None
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "3"
members = ["lib", "wasm"]

[workspace.package]
version = "0.1.0"
authors = ["SyoBoN"]
edition = "2024"
license = "UPL-1.0"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
