[package]
name = "markov_chain_notestock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
lindera = "0.44.1"
nanohtml2text = "0.2.1"
rand = "0.9.1"
regex = { version = "1.11.1", default-features = false, features = ["perf", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = { version = "0.4.44", default-features = false }
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true

[features]
default = ["neologd"]
unidic = ["lindera/unidic"]
neologd = ["lindera/ipadic-neologd"]
