# SPDX-FileCopyrightText: None
# 
# SPDX-License-Identifier: CC0-1.0

[package]
name = "markov_chain_notestock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
litsea = { version = "0.2.0", git = "https://github.com/syobocat/litsea.git" }
nanohtml2text = "0.2.1"
rand = "0.9.1"
regex = { version = "1.11.1", default-features = false, features = ["perf", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = { version = "0.4.44", default-features = false }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[lints]
workspace = true
