# SPDX-FileCopyrightText: None
# 
# SPDX-License-Identifier: CC0-1.0

[package]
name = "markov_chain_notestock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
litsea = "0.3.2"
nanohtml2text = "0.2.1"
rand = "0.9.1"
regex = { version = "1.11.1", default-features = false, features = ["perf", "std"] }
rkyv = "0.8.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true
