[package]
name = "markov_chain_notestock_wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
markov_chain_notestock.path = "../lib"
wasm-bindgen = "0.2.100"

[lints]
workspace = true
